--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ratio-and-proportion",
-  "version": "1.1.0-dev.10",
+  "version": "1.1.0-preferences.0",
   "license": "GPL-3.0",
   "repository": {
     "type": "git",
